added lab 10 code

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,9 +1,10 @@
 cmake_minimum_required(VERSION 3.16)
 
 # Sets project name
-project(lab10 LANGUAGES CXX C)
+project(2230-Final-Proj LANGUAGES CXX C)
 
 set(CMAKE_INCLUDE_CURRENT_DIR ON)
+
 set(CMAKE_AUTOUIC ON)
 set(CMAKE_AUTOMOC ON)
 set(CMAKE_AUTORCC ON)
@@ -14,10 +15,10 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 # Specifies required Qt components
 find_package(Qt6 REQUIRED COMPONENTS Core)
-find_package(Qt6 REQUIRED COMPONENTS Widgets)
+find_package(Qt6 REQUIRED COMPONENTS Gui)
 find_package(Qt6 REQUIRED COMPONENTS OpenGL)
 find_package(Qt6 REQUIRED COMPONENTS OpenGLWidgets)
-find_package(Qt6 REQUIRED COMPONENTS Gui)
+find_package(Qt6 REQUIRED COMPONENTS Xml)
 
 # Allows you to include files from within those directories, without prefixing their filepaths
 include_directories(src)
@@ -25,21 +26,31 @@ include_directories(src)
 # Specifies .cpp and .h files to be passed to the compiler
 add_executable(${PROJECT_NAME}
     src/main.cpp
-    src/glrenderer.cpp
-    src/mainwindow.cpp
 
-    src/glrenderer.h
+    src/realtime.cpp
+    src/mainwindow.cpp
+    src/settings.cpp
+    src/utils/shapes/shapes.cpp
+    src/utils/shapes/dome.cpp
+    src/utils/camera.cpp
+    src/utils/managers/glmanager.cpp
+    src/utils/managers/uniformmanager.cpp
+
     src/mainwindow.h
-    src/shaderloader.h
+    src/realtime.h
+    src/settings.h
+    src/utils/shaderloader.h
+    src/utils/aspectratiowidget/aspectratiowidget.hpp
+    src/utils/shapes/shapes.h
+    src/utils/shapes/dome.h
+    src/utils/camera.h
+    src/utils/managers/glmanager.h
+    src/utils/managers/uniformmanager.h
+    src/utils/debug.h
 )
-# Specifies other files
-qt_add_resources(${PROJECT_NAME} "Resources"
-  PREFIX
-  "/"
-  FILES
-  resources/shaders/default.vert
-  resources/shaders/default.frag
-)
+
+# GLM: this creates its library and allows you to `#include "glm/..."`
+add_subdirectory(glm)
 
 # GLEW: this creates its library and allows you to `#include "GL/glew.h"`
 add_library(StaticGLEW STATIC glew/src/glew.c)
@@ -47,12 +58,21 @@ include_directories(${PROJECT_NAME} PRIVATE glew/include)
 
 # Specifies libraries to be linked (Qt components, glew, etc)
 target_link_libraries(${PROJECT_NAME} PRIVATE
-  Qt::Core
-  Qt::Widgets
-  Qt::OpenGL
-  Qt::OpenGLWidgets
-  Qt::Gui
-  StaticGLEW
+    Qt::Core
+    Qt::Gui
+    Qt::OpenGL
+    Qt::OpenGLWidgets
+    Qt::Xml
+    StaticGLEW
+)
+
+# Specifies other files
+qt6_add_resources(${PROJECT_NAME} "Resources"
+    PREFIX
+        "/"
+    FILES
+        resources/shaders/phong.frag
+        resources/shaders/phong.vert
 )
 
 # GLEW: this provides support for Windows (including 64-bit)
@@ -68,7 +88,6 @@ endif()
 if (MSVC OR MSYS OR MINGW)
   set(CMAKE_CXX_FLAGS "-Wno-volatile")
 endif()
-
 # Set this flag to silence warnings on MacOS
 if (APPLE)
   set(CMAKE_CXX_FLAGS "-Wno-deprecated-volatile")
