fixed all camera movement

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 3.16)
 
 # Sets project name
-project(lab10 LANGUAGES CXX C)
+project(2230-final-project LANGUAGES CXX C)
 
 set(CMAKE_INCLUDE_CURRENT_DIR ON)
 set(CMAKE_AUTOUIC ON)
@@ -27,10 +27,12 @@ add_executable(${PROJECT_NAME}
     src/main.cpp
     src/glrenderer.cpp
     src/mainwindow.cpp
+    src/utils/camera.cpp
 
     src/glrenderer.h
     src/mainwindow.h
     src/shaderloader.h
+    src/utils/camera.h
 )
 # Specifies other files
 qt_add_resources(${PROJECT_NAME} "Resources"
