--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -55,6 +55,7 @@ qt_add_resources(${PROJECT_NAME} "Resources"
   resources/shaders/particle.vert
   resources/shaders/particle.vert
   resources/images/indian-travel-destination-beautiful-attractive.jpg
+  resources/images/2.jpg
 
 )
 
