--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -56,6 +56,7 @@ qt_add_resources(${PROJECT_NAME} "Resources"
   resources/shaders/water.vert
   resources/images/indian-travel-destination-beautiful-attractive.jpg
   resources/images/2.jpg
+  resources/images/natural-landscape.jpg
 
   resources/images/water_displacement_1.jpg
   resources/images/water_displacement_2.jpg
